# eo-visual-scout

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  format-fix.yml
app/: app.py
src/eovs/: __init__.py  api.py  build_embeddings.py  ingest.py  search.py
tests/: test_api.py  test_search.py
